# BattleCity

./: .gitignore  CMakeLists.txt  Direction.h  Point2D.h  main.cpp
entity/: Direction.h  GameObject.h  Headquarters.h  Point2D.h  Projectile.h
entity/obstacle/: IceObstacle.h  IronWallObstacle.h  Obstacle.h  ObstacleProperties.h  StoneWallObstacle.h  WallObstacle.h  WaterObstacle.h
entity/tank/: EnemyTank.h  HeavyTank.h  ITank.h  LightTank.h  MediumTank.h  PlayerTank.h  Tank.h  TankType.h
gamemap/: GameMap.h
message/: FieldMessage.cpp  FieldMessage.h  FieldMessageSerializer.cpp  FieldMessageSerializer.h
tests/: FieldMessageFixture.cpp  FieldMessageTests.cpp
